content/nomad/v1.8.x/content/commands/operator/index.mdx
---
layout: docs
page_title: 'Commands: operator'
description: |
  The operator command provides cluster-level tools for Nomad operators.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-11-24T15:54:54-06:00
last_modified: 2025-11-24T15:54:54-06:00
# END AUTO GENERATED METADATA
---

# Command: operator

The `operator` command provides cluster-level tools for Nomad operators, such
as interacting with the Raft subsystem.

~> Use this command with extreme caution, as improper use could lead to a Nomad
outage and even loss of data.

See the [Outage Recovery guide] guide for some examples of how this command is
used. For an API to perform these operations programmatically, please see the
documentation for the [Operator] endpoint.

## Usage

Usage: `nomad operator <subcommand> <subcommand> [options]`

Run `nomad operator <subcommand>` with no arguments for help on that subcommand.
The following subcommands are available:

- [`operator autopilot get-config`][get-config] - Display the current Autopilot
  configuration

- [`operator autopilot set-config`][set-config] - Modify the current Autopilot
  configuration

- [`operator debug`][debug] - Build an archive of debug data

- [`operator gossip keyring generate`][gossip_keyring_generate] - Generates a gossip encryption key

- [`operator gossip keyring install`][gossip_keyring_install] - Install a gossip encryption key

- [`operator gossip keyring list`][gossip_keyring_list] - List available gossip encryption keys

- [`operator gossip keyring remove`][gossip_keyring_remove] - Deletes a gossip encryption key

- [`operator gossip keyring use`][gossip_keyring_use] - Sets a gossip encryption key as the active key

- [`operator raft list-peers`][list] - Display the current Raft peer
  configuration

- [`operator raft remove-peer`][remove] - Remove a Nomad server from the Raft
  configuration

- [`operator root keyring list`][root_keyring_list] - List available root encryption keys

- [`operator root keyring remove`][root_keyring_remove] - Deletes a root encryption key

- [`operator root keyring rotate`][root_keyring_rotate] - Rotates the root encryption key

- [`operator scheduler get-config`][scheduler-get-config] - Display the current
  scheduler configuration

- [`operator scheduler set-config`][scheduler-set-config] - Modify the scheduler
  configuration

- [`operator snapshot agent`][snapshot-agent] <EnterpriseAlert inline /> - Inspects a snapshot of the Nomad server state

- [`operator snapshot save`][snapshot-save] - Saves a snapshot of the Nomad server state

- [`operator snapshot restore`][snapshot-restore] - Restores a snapshot of the Nomad server state

- [`operator snapshot inspect`][snapshot-inspect] - Inspects a snapshot of the Nomad server state

[debug]: /nomad/commands/operator/debug 'Builds an archive of configuration and state'
[get-config]: /nomad/commands/operator/autopilot/get-config 'Autopilot Get Config command'
[gossip_keyring_generate]: /nomad/commands/operator/gossip/keyring-generate 'Generates a gossip encryption key'
[gossip_keyring_install]: /nomad/commands/operator/gossip/keyring-install 'Install a gossip encryption key'
[gossip_keyring_list]: /nomad/commands/operator/gossip/keyring-list 'List available gossip encryption keys'
[gossip_keyring_remove]: /nomad/commands/operator/gossip/keyring-remove 'Deletes a gossip encryption key'
[gossip_keyring_use]: /nomad/commands/operator/gossip/keyring-use 'Sets a gossip encryption key as the active key'
[list]: /nomad/commands/operator/raft/list-peers 'Raft List Peers command'
[operator]: /nomad/api-docs/operator 'Operator API documentation'
[outage recovery guide]: /nomad/tutorials/manage-clusters/outage-recovery
[remove]: /nomad/commands/operator/raft/remove-peer 'Raft Remove Peer command'
[root_keyring_list]: /nomad/commands/operator/root/keyring-list 'List available root encryption keys'
[root_keyring_remove]: /nomad/commands/operator/root/keyring-remove 'Deletes a root encryption key'
[root_keyring_rotate]: /nomad/commands/operator/root/keyring-rotate 'Rotates the root encryption key'
[set-config]: /nomad/commands/operator/autopilot/set-config 'Autopilot Set Config command'
[snapshot-save]: /nomad/commands/operator/snapshot/save 'Snapshot Save command'
[snapshot-restore]: /nomad/commands/operator/snapshot/restore 'Snapshot Restore command'
[snapshot-inspect]: /nomad/commands/operator/snapshot/inspect 'Snapshot Inspect command'
[snapshot-agent]: /nomad/commands/operator/snapshot/agent 'Snapshot Agent command'
[scheduler-get-config]: /nomad/commands/operator/scheduler/get-config 'Scheduler Get Config command'
[scheduler-set-config]: /nomad/commands/operator/scheduler/set-config 'Scheduler Set Config command'
